сделал сервис для авторизации через oauth и написал для них соответсвующие ручки
